--- a/src/config/config.cfg
+++ b/src/config/config.cfg
@@ -4,10 +4,10 @@ train_val_split = 0.9
 optimizer = adamw
 model = gpt
 
-batch_size = 64 # how many independent sequences will we process in parallel?
-block_size = 256 # what is the maximum context length for predictions?
+batch_size = 64 
+block_size = 256
 max_iters = 5000
-eval_steps = 500
+eval_steps = 1
 learning_rate = 3e-4
 device = 'cpu'
 n_embd = 384
