--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,12 +17,13 @@ repos:
     rev: 6.0.0
     hooks:
     -   id: flake8
+        args: ['--ignore=E265,E501,W504,E125']
 -   repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v2.0.1
     hooks:
     -   id: autopep8
         # disable a few rewrites which will cause autopep8 to reflow
-        args: [--in-place, '--ignore=E265,E501,W504']
+        args: [--in-place, '--ignore=E265,E501,W504,E125']
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
