--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -1,7 +1,10 @@
 data:
+  path: 'data/input.txt'
   training_file: ./data/input.txt
   train_val_split: 0.9
-  block_size: 256
+  train_split: 0.9
+  block_size: 128
+  truncate: 0.05
 
 optimizer:
   optimizer: adamw
@@ -16,7 +19,13 @@ model:
 
 
 train:
-  batch_size: 64
+  data_loader_workers: 4
+  save_every: 3
+  max_epochs: 10
+  batch_size: 216
   max_iters: 5000
   eval_steps: 1
   device: 'cpu'
+  grad_norm_clip: 1.0
+  snapshot_path: gpt_snapshot.pt
+  use_amp: False
