--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,27 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+antlr4-python3-runtime==4.9.3
+async-timeout==4.0.2
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
 filelock==3.10.7
+frozenlist==1.3.3
+fsspec==2023.4.0
+hydra-core==1.3.2
+idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 mpmath==1.3.0
+multidict==6.0.4
 networkx==3.0
 numpy==1.24.2
+omegaconf==2.3.0
+packaging==23.0
+PyYAML==6.0
+requests==2.28.2
 sympy==1.11.1
 torch==2.0.0
 typing_extensions==4.5.0
+urllib3==1.26.15
+yarl==1.8.2
