--- a/infra/k8s/karpenter/provisioners/general.yaml
+++ b/infra/k8s/karpenter/provisioners/general.yaml
@@ -3,10 +3,12 @@
 apiVersion: karpenter.sh/v1alpha5
 kind: Provisioner
 metadata:
-  name: default
+  name: generalcompute
 spec:
   ttlSecondsAfterEmpty: 60 # scale down nodes after 60 seconds without workloads (excluding daemons)
   ttlSecondsUntilExpired: 604800 # expire nodes after 7 days (in seconds) = 7 * 60 * 60 * 24
+  labels:
+    intent: apps
   limits:
     resources:
       cpu: 100 # limit to 100 CPU cores
@@ -19,6 +21,9 @@ spec:
     - key: karpenter.k8s.aws/instance-size
       operator: NotIn
       values: [nano, micro, small, large]
+    - key: karpenter.sh/capacity-type
+      operator: In
+      values: ["on-demand","spot"]
   providerRef:
     name: my-provider
 ---
