--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -28,4 +28,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/stu-gpt:latest
+          tags: stulox/stu-gpt:latest
